--- a/train.html
+++ b/train.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Train Station Tracker</title>
 </head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="train.css">
 <body>
 
 <div class="container">
@@ -35,6 +35,6 @@
     <h2>Stations:</h2>
     <pre id="stationList">No stations created yet.</pre>
 </div>
-<script src="script.js"></script>
+<script src="train.js"></script>
 </body>
 </html>
